welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: Int does not take parameters
	for(i <- 0 to (table.length()) - 1){
                                   ^